--- a/Central_Limit.ipynb
+++ b/Central_Limit.ipynb
@@ -59,7 +59,7 @@
    },
    "outputs": [],
    "source": [
-    "#Let's try it!\n",
+    "#Let us try it!\n",
     "\n",
     "r = stats.randint.rvs(1,7,size=1)"
    ]
